<?xml version="1.0"?>
<package format="2">
  <name>ranaa_pkg</name>
  <version>0.0.0</version>
  <description>The ranaa_pkg package</description>

  
  <maintainer email="rana@todo.todo">rana</maintainer>


 
  <license>TODO</license>


 
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>turtlesim</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>turtlesim</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <build_depend>std_msgs</build_depend>
  <exec_depend>turtlesim</exec_depend>
  <build_depend>geometry_msgs</build_depend>


  
  <export>
    
  </export>
</package>
